RESOLVED FIXED238955
Broaden TypedArray API fix to all apps not just Bleacher Report
https://bugs.webkit.org/show_bug.cgi?id=238955
Summary Broaden TypedArray API fix to all apps not just Bleacher Report
Keith Miller
Reported 2022-04-07 13:12:03 PDT
Broaden TypedArray API fix to all apps not just Bleacher Report
Attachments
Patch (3.79 KB, patch)
2022-04-07 13:14 PDT, Keith Miller
saam: review+
Keith Miller
Comment 1 2022-04-07 13:14:02 PDT
Saam Barati
Comment 2 2022-04-07 13:17:59 PDT
Comment on attachment 456960 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=456960&action=review r=me > Source/JavaScriptCore/API/JSTypedArray.cpp:369 > +inline static bool isLinkedBeforeQuirk() let's call this "isLinkedBeforeTypedArrayLengthQuirk"?
Keith Miller
Comment 3 2022-04-08 09:41:16 PDT
Radar WebKit Bug Importer
Comment 4 2022-04-08 09:42:17 PDT
Darin Adler
Comment 5 2022-04-08 10:07:14 PDT
Comment on attachment 456960 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=456960&action=review >> Source/JavaScriptCore/API/JSTypedArray.cpp:369 >> +inline static bool isLinkedBeforeQuirk() > > let's call this "isLinkedBeforeTypedArrayLengthQuirk"? Typically in the past I have named such functions needsTypedArrayAPIQuirk() rather than specifying how the functions do their jobs. I think it’s easier to read at the call site.
Saam Barati
Comment 6 2022-04-08 16:06:54 PDT
(In reply to Darin Adler from comment #5) > Comment on attachment 456960 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=456960&action=review > > >> Source/JavaScriptCore/API/JSTypedArray.cpp:369 > >> +inline static bool isLinkedBeforeQuirk() > > > > let's call this "isLinkedBeforeTypedArrayLengthQuirk"? > > Typically in the past I have named such functions needsTypedArrayAPIQuirk() > rather than specifying how the functions do their jobs. I think it’s easier > to read at the call site. I agree this is a better name and aids readability.
Note You need to log in before you can comment on or make changes to this bug.