Broaden TypedArray API fix to all apps not just Bleacher Report https://bugs.webkit.org/show_bug.cgi?id=238955

Reviewed by Saam Barati.

Source/JavaScriptCore:

* API/JSTypedArray.cpp:
(isLinkedBeforeTypedArrayLengthQuirk):
(JSObjectGetArrayBufferByteLength):
(isBleecherReport): Deleted.

Source/WTF:

* wtf/cocoa/RuntimeApplicationChecksCocoa.h:

Canonical link: https://commits.webkit.org/249441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292609 268f45cc-cd09-0410-ab3c-d52691b4dbfc