Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h
@@ -86,7 +86,7 @@ enum class SDKVersion : uint32_t {
     FirstWithoutExpandoIndexedPropertiesOnWindow = DYLD_IOS_VERSION_15_0,
     FirstThatDoesNotDrainTheMicrotaskQueueWhenCallingObjC = DYLD_IOS_VERSION_15_0,
     FirstWithAuthorizationHeaderOnSameOriginRedirects = DYLD_IOS_VERSION_15_4,
-    FirstWithoutBleecherReportQuirk = DYLD_IOS_VERSION_16_0,
+    FirstWithoutTypedArrayAPIQuirk = DYLD_IOS_VERSION_16_0,
     FirstForbiddingDotPrefixedFonts = DYLD_IOS_VERSION_16_0,
 #elif PLATFORM(MAC)
     FirstVersionThatSupportsInitConstructors = 0xA0A00, // OS X 10.10
